--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
         - id: Order
           uri: http://localhost:8081
           predicates:
-            - Path=/orders/**, /orderInfos/**
+            - Path=/orders/**, /menus/**, /orderInfos/**
         - id: Shop
           uri: http://localhost:8082
           predicates:
@@ -54,7 +54,7 @@ spring:
         - id: Order
           uri: http://order:8080
           predicates:
-            - Path=/orders/**, /orderInfos/**
+            - Path=/orders/**, /menus/**, /orderInfos/**
         - id: Shop
           uri: http://shop:8080
           predicates:
